# sql2doc

./: Cargo.toml  LICENSE  README.md  clippy.toml  rustfmt.toml
src/core/ast/: ddl.rs  dml.rs  mod.rs  statement.rs  types.rs
src/core/domain/: constraint.rs  entity.rs  field.rs  indexes.rs  insights.rs  junction.rs  mod.rs  partitions.rs  permissions.rs  procedures.rs  relationships.rs  triggers.rs  views.rs
src/core/parse/: dialect.rs  lexer.rs  mod.rs  parser.rs
tests/: ast_integration.rs  lexer_test.rs
