[package]
name = "sql2doc"
version = "0.1.0"
edition = "2024"

[dependencies]
sqlparser = "0.25"
regex = "1.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
quick-xml = "0.27"
clap = { version = "4.5", features = ["derive"] }
pulldown-cmark = "0.9"
askama = "0.14"
anyhow = "1.0"
thiserror = "1.0"
lazy_static = "1.4"
log = "0.4"
env_logger = "0.10"